--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
-     crossorigin="anonymous" referrerpolicy="no-referrer"/>
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" 
-     crossorigin="anonymous" referrerpolicy="no-referrer"/>
-     <link rel="stylesheet" href="style.css">
-    <title>Número secreto</title>
-</head>
-<body>
-    <h1> Acerte o número secreto</h1>
-
-    <h3>O número secreto está entre <span id="menor-valor">0</span> e <span id="maior-valor">100</span></h3>
-
-    <div id="chute" class="mensagem">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+      integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Anotaqui</title>
+  </head>
+  <body>
+    <h1 class="title">
+      Anotaqui
+    </h1>
+    <div>
+<p>Anotaqui ✍️ Uma plataforma rápida, simples e automatizada para você transcrever reuniões, cultos e até mesmo aulas e palestras com praticidade!</p>
     </div>
-    <button id="botaoJogarNovamente" onclick="jogarNovamente()" style="display: none;">Jogar Novamente</button>
+    <div style="margin-top: 1rem">
+      <button id="startButton">Iniciar Gravação</button>
+      <button id="stopButton">Parar</button>
+      <button id="downloadButton">Baixar .txt</button>
+    </div>
+    <div id="chute" style="margin-top: 2rem"></div>
 
-
-
-    <script src="app/sortearNumero.js"></script>
     <script src="app/reconhecimentoDeVoz.js"></script>
-    <script src="app/validacao.js"></script>
-</body>
+  </body>
 </html>
