fix: implementing type attribute

--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     </div>
     <div id="chute" style="margin-top: 2rem"></div>
 
-    <script src="app/reconhecimentoDeVoz.js"></script>
+    <script type="module" src="app/reconhecimentoDeVoz.js" ></script>
   </body>
 </html>
