fix: name class

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <button id="stopButton">Parar</button>
       <button id="downloadButton">Baixar .txt</button>
     </div>
-    <div id="chute" style="margin-top: 2rem"></div>
+    <div id="frase" style="margin-top: 2rem"></div>
 
     <script type="module" src="app/reconhecimentoDeVoz.js" ></script>
   </body>
